# ec

./: .clang-format  .codespellrc  .conform.yaml  .cppcheck-suppressions.txt  .editorconfig  .gitignore  .gitmodules  .mailmap  .pre-commit-config.yaml  .uncrustify.cfg  CMakeLists.txt  Makefile  POWER.txt  README.md  REUSE.toml  RT809F.md  build.sh  ectool.sh  firmware.metainfo.xml.in  layouts.sh  power.sh  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  codeql.yml
LICENSES/: MIT.txt
cmake/: toolchain-sdcc.cmake
containers/: Makefile
containers/ec/: Containerfile
containers/ec-alpine/: Containerfile
containers/ec-debian/: Containerfile
doc/: README.md  adding-a-new-board.md  controllers.md  debugging.md  dev-env.md  flashing.md  keyboard-layout-customization.md  mega2560.md
docs/: SUMMARY.md  adding-a-new-board.md  book.toml  controllers.md  debugging.md  dev-env.md  flashing.md  keyboard-layout-customization.md  mega2560.md  security.md
driver/: Makefile  system76_ec_console.c
scripts/: boards.sh  check-home-segment.sh  clang-format.sh  cppcheck.sh  deps.sh  ecspy_to_c.py  ectool.sh  install-deps.sh  layouts.sh  lvfs.sh  mtl_ecspy_to_c.py  power.sh  spatch.sh
scripts/coccinelle/: bit-macro.cocci  macros.h
scripts/hooks/: pre-commit.sh
scripts/lint/: 01-reuse.sh  01-spdx-tags.sh  02-clang-format.sh  02-uncrustify.sh  03-shellcheck.sh  indent.sh  lint.sh  spdx.sh  util.sh
src/: delay.c  gctrl.c  gpio.c  kbc.c  main.c  pin.c  pmc.c  stdio.c  timer.c
src/app/: Makefile.mk  acpi.c  battery.c  config.c  dgpu.c  ecpm.c  espi.c  fan.c  gctrl.c  kbc.c  kbscan.c  keymap.c  lid.c  main.c  parallel.c  peci.c  pmc.c  pnp.c  ps2.c  pwm.c  scratch.c  security.c  smbus.c  smfi.c  stdio.c  wireless.c
src/app/charger/: bq24780s.c  oz26786.c
src/app/flash/: Makefile.mk  main.c  wrapper.c
src/app/include/app/: acpi.h  battery.h  board.h  config.h  dgpu.h  ecpm.h  espi.h  fan.h  flash.h  gctrl.h  kbc.h  kbled.h  kbscan.h  lid.h  parallel.h  peci.h  pmc.h  pnp.h  power.h  ps2.h  pwm.h  scratch.h  security.h  smbus.h  smfi.h  usbpd.h  wireless.h
src/app/kbled/: bonw14.c  common.c  rgb_i2c.c  rgb_pwm.c  white_dac.c
src/app/main/: CMakeLists.txt  Makefile.mk  acpi.c  battery.c  config.c  dgpu.c  ecpm.c  espi.c  fan.c  gctrl.c  kbc.c  kbscan.c  keymap.c  lid.c  main.c  parallel.c  peci.c  pmc.c  pnp.c  ps2.c  pwm.c  scratch.c  security.c  smbus.c  smfi.c  stdio.c  wireless.c
src/app/main/charger/: bq24780s.c  oz26786.c
src/app/main/fan/: Makefile.mk  common.c  interp.c  step.c
src/app/main/flash/: CMakeLists.txt  Makefile.mk  main.c  wrapper.c
src/app/main/flash/include/flash/: entry.h
src/app/main/include/app/: acpi.h  battery.h  board.h  config.h  dgpu.h  ecpm.h  espi.h  fan.h  flash.h  gctrl.h  kbc.h  kbled.h  kbscan.h  lid.h  parallel.h  peci.h  pmc.h  pnp.h  power.h  ps2.h  pwm.h  scratch.h  security.h  smbus.h  smfi.h  usbpd.h  wireless.h
src/app/main/kbled/: bonw14.c  common.c  rgb_i2c.c  rgb_pwm.c  white_dac.c
src/app/main/power/: amd.c  intel.c
src/app/main/scratch/: CMakeLists.txt  Makefile.mk  main.c  stdio.c
src/app/main/usbpd/: tps65987.c
src/app/power/: amd.c  intel.c
src/app/scratch/: Makefile.mk  main.c  stdio.c
src/app/usbpd/: tps65987.c
src/arch/8051/: CMakeLists.txt  arch.c  arch.mk  delay.c  reset.c  time.c  timer.c  toolchain.mk
src/arch/avr/: Makefile.mk  arch.c  arch.mk  gpio.c  i2c.c  i2c_slave.c  time.c  timer.c  toolchain.mk  uart.c
src/board/arduino/atmega2560/: main.c
src/board/arduino/mega2560/: README.md  battery.c  board.mk  i2c.c  main.c  parallel.c  stdio.c  uart.c
src/board/arduino/micro/: Makefile.mk  README.md  board.mk  main.c
src/board/arduino/uno/: README.md  battery.c  board.mk  i2c.c  main.c  parallel.c
src/board/clevo/: ns50pu  nv40mz  nv40pz
src/board/novacustom/: ns5x_tgl
src/board/novacustom/v540tnx/: board.c  board.mk  gpio.c
src/board/novacustom/v540tu/: board.mk
src/board/novacustom/v560tnx/: board.c  board.mk  gpio.c
src/board/novacustom/v560tu/: board.c  board.mk  gpio.c
src/board/novacustom/v5x0tu/: gpio.c
src/board/system76/: darp6  galp4  galp7  gaze16-3060-b  gaze17-3060-b  oryp10
src/common/: CMakeLists.txt  common.mk  config.c  i2c.c  keymap.c  version.c
src/drivers/: Makefile.mk
src/drivers/dgpu/: Makefile.mk  dgpu.h  nvidia.c
src/drivers/kbled/: Makefile.mk  dac.c  hotkey.c  i2c.c  kbled.h  pwm.c  usb.c
src/drivers/security/: Makefile.mk  security.c  security.h
src/drivers/usbpd/: Makefile.mk  tps65987.c  usbpd.h
src/ec/atmega/: ec.mk
src/ec/atmega328p/: ec.mk
src/ec/atmega32u4/: ec.mk
src/ec/it5570e/: .i2c.c.swp  ec.c  ec.mk  espi.c  gpio.c  i2c.c  intc.c  kbc.c  parallel.c  pmc.c  post.c  ps2.c  signature.c
src/ec/it8587e/: ec.c  ec.mk  i2c.c  intc.c  kbc.c  parallel.c  pmc.c  ps2.c  signature.c
src/ec/ite/: Makefile.mk  adc.c  ec.c  ec.mk  espi.c  etwd.c  gpio.c  i2c.c  intc.c  kbc.c  pmc.c  ps2.c  pwm.c  signature.c  wuc.c
src/include/: gctrl.h  gpio.h  kbc.h  kbscan.h  pin.h  pmc.h  ps2.h  reset.h  signature.h
src/soc/: Makefile.mk
src/soc/ite/: CMakeLists.txt  Makefile.mk  espi.c  gpio.c  i2c.c  intc.c  kbc.c  pmc.c  ps2.c  pwm.c  signature.c  soc.c  wuc.c
tool/: Cargo.toml  LICENSE
tool/src/: .ec.rs.swp  ec.rs  error.rs  firmware.rs  legacy.rs  lib.rs  main.rs  pmc.rs  spi.rs  super_io.rs  timeout.rs
tool/src/access/: hid.rs  mod.rs
tool/src/access/lpc/: direct.rs  linux.rs  mod.rs  sim.rs
tools/containers/: Makefile
tools/containers/ec/: Containerfile
tools/containers/sdcc/: Containerfile
tools/mega2560/: .gitignore  Makefile  README.md  REUSE.toml
tools/mega2560/src/: gpio.c  gpio.h  main.c  parallel.c  uart.c  uart.h
tools/system76_ectool/: .gitignore  Cargo.toml  LICENSE  REUSE.toml
tools/system76_ectool/src/: ec.rs  error.rs  firmware.rs  legacy.rs  lib.rs  main.rs  pmc.rs  spi.rs  super_io.rs  timeout.rs
tools/system76_ectool/src/access/: hid.rs  mod.rs
tools/system76_ectool/src/access/lpc/: direct.rs  linux.rs  mod.rs  sim.rs
(+686 files in other folders)
