[package]
name = "system76_ectool"
version = "0.3.8"
edition = "2018"
description = "System76 EC tool"
license = "MIT"
authors = ["Jeremy Soller <jeremy@system76.com>"]
repository = "https://github.com/system76/ec"
documentation = "https://docs.rs/system76_ectool"

[lib]
name = "ectool"

[[bin]]
name = "system76_ectool"
required-features = ["std", "hidapi", "clap"]

[dependencies]
clap = { version = "3.2", optional = true }
libc = { version = "0.2", optional = true }
hidapi = { version = "1.4", default-features = false, features = ["linux-shared-hidraw"], optional = true }
redox_hwio = { version = "0.1.6", optional = true }
downcast-rs = { version = "1.2.0", default-features = false }

[features]
default = ["std", "hidapi", "clap"]
std = ["libc", "downcast-rs/std"]

[package.metadata.docs.rs]
all-features = true
