[package]
name = "dasharo_ectool"
version = "0.3.8"
edition = "2018"
description = "System76 EC tool"
license = "MIT"
authors = ["Jeremy Soller <jeremy@system76.com>"]
repository = "https://github.com/dasharo/ec"
documentation = "https://docs.dasharo.com"

[lib]
name = "ectool"

[[bin]]
name = "dasharo_ectool"
required-features = ["std", "hidapi", "clap"]

[dependencies]
clap = { version = "3.2", optional = true }
libc = { version = "0.2", optional = true }
hidapi = { version = "1.4", default-features = false, features = ["linux-shared-hidraw"], optional = true }
redox_hwio = { version = "0.1.6", default-features = false, optional = true }
downcast-rs = { version = "1.2.0", default-features = false }

[features]
default = ["std", "hidapi", "clap"]
std = ["libc", "downcast-rs/std"]

[package.metadata.docs.rs]
all-features = true

[registries.crates-io]
protocol = "sparse"
